nic_bp_association.tf
resource "azurerm_network_interface_backend_address_pool_association" "nic_backend_pool" {
  count                   = 2
  network_interface_id    = azurerm_network_interface.nic[count.index].id
  ip_configuration_name   = "internal"
  backend_address_pool_id = azurerm_lb_backend_address_pool.backend_pool.id
}
